[gd_scene load_steps=16 format=3 uid="uid://bryh4m50q0dgo"]

[ext_resource type="Texture2D" uid="uid://bm5lux7wue7t8" path="res://sprites/coin_anim.png" id="1_3l7rd"]
[ext_resource type="Script" path="res://scripts/coin.gd" id="1_yc21c"]
[ext_resource type="Texture2D" uid="uid://g3lbvs45lr1l" path="res://sprites/s_star.png" id="2_8j4ft"]
[ext_resource type="PackedScene" uid="uid://bnscgwyelyck3" path="res://scenes/ring_effect.tscn" id="3_ec37v"]

[sub_resource type="AtlasTexture" id="AtlasTexture_46swt"]
atlas = ExtResource("1_3l7rd")
region = Rect2(0, 0, 130, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_0k2kr"]
atlas = ExtResource("1_3l7rd")
region = Rect2(131, 0, 130, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_g260p"]
atlas = ExtResource("1_3l7rd")
region = Rect2(262, 0, 130, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_7o4m7"]
atlas = ExtResource("1_3l7rd")
region = Rect2(393, 0, 130, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_lbq65"]
atlas = ExtResource("1_3l7rd")
region = Rect2(524, 0, 130, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_1e488"]
atlas = ExtResource("1_3l7rd")
region = Rect2(655, 0, 130, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_xtaty"]
atlas = ExtResource("1_3l7rd")
region = Rect2(786, 0, 130, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1rco"]
atlas = ExtResource("1_3l7rd")
region = Rect2(917, 0, 130, 130)

[sub_resource type="SpriteFrames" id="SpriteFrames_4ytrr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_46swt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0k2kr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g260p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7o4m7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lbq65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1e488")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xtaty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1rco")
}],
"loop": true,
"name": &"new_animation",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_vw6yo"]
radius = 10.0499

[sub_resource type="Curve" id="Curve_a10ua"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.495677, 0.00338209), 0.0, 0.0, 0, 0]
point_count = 2

[node name="Coin" type="Area2D"]
z_index = -1
script = ExtResource("1_yc21c")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 1.90735e-06)
scale = Vector2(0.230769, 0.230769)
sprite_frames = SubResource("SpriteFrames_4ytrr")
animation = &"new_animation"
autoplay = "new_animation"
frame_progress = 0.802482

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_vw6yo")

[node name="CollectionEffect" type="Node2D" parent="."]

[node name="RingEffect" parent="CollectionEffect" instance=ExtResource("3_ec37v")]
animation_duration = 0.3
ring_size = 40.0
initial_width = 5.0

[node name="StarParticles" type="CPUParticles2D" parent="CollectionEffect"]
emitting = false
amount = 5
lifetime = 0.6
one_shot = true
explosiveness = 1.0
texture = ExtResource("2_8j4ft")
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 150.0
damping_min = 2.0
damping_max = 4.0
scale_amount_min = 0.5
scale_amount_max = 1.25
scale_amount_curve = SubResource("Curve_a10ua")
color = Color(1, 0.875258, 0.625109, 0.921569)

[node name="LightBurst" type="CPUParticles2D" parent="CollectionEffect"]
emitting = false
lifetime = 0.5
one_shot = true
explosiveness = 1.0
emission_shape = 4
emission_points = PackedVector2Array()
emission_colors = PackedColorArray()
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 76.5
initial_velocity_max = 98.36
scale_amount_min = 0.0
scale_amount_max = 4.0
color = Color(1, 0.956863, 1, 0.815686)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
